// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.pdp.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/pdp/v1;pdpv1";


message EvaluateVerbRequest {
  EvaluationMetadata metadata = 1;  

  // teleport_user is the user requesting access (required).
  string teleport_user = 2;

  // resource_kind is the kind of resource being accessed (required).
  string resource_kind = 3;

  // verb is the verb being requested (required).
  string verb = 4;
}

message EvaluateVerbResponse {
  oneof result {
      VerbPermit allow = 1;
      VerbDenial deny = 2;
  }
}

message VerbPermit {
  PermitMetadata metadata = 1;

  // ...
}


message VerbDenial {
  DenialMetadata metadata = 1;

  // ...
}
